drop stale ballanced consumer; update deps and structure; update kafka driver